public class Workplace extends Node {
    @Override
    public void addRoad(Road road) { super.addRoad(road); }
}
